# iris-drive

./: .env.local.example  .env.release.example  .env.zapstore.example  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Justfile  README.md  ZAPSTORE_RELEASE_NOTES.md  zapstore.yaml
android/: README.md  settings.gradle.kts
crates/hashdrive-cli/: Cargo.toml  README.md
crates/hashdrive-cli/src/: main.rs
crates/hashdrive-cli/tests/: cli_e2e.rs
crates/hashdrive-core/: Cargo.toml  README.md
crates/hashdrive-core/src/: config.rs  conflict.rs  htree_client.rs  identity.rs  indexer.rs  lib.rs  paths.rs  share.rs  sync.rs
crates/hashtree-fips-transport/: Cargo.toml
crates/hashtree-fips-transport/src/: lib.rs  tcp_blob.rs
crates/hashtree-provider/: Cargo.toml
crates/hashtree-provider/src/: diff.rs  error.rs  hashtree_impl.rs  lib.rs  provider.rs
crates/hashtree-provider/tests/: hashtree_impl.rs  path_diff.rs  provider_trait.rs
crates/iris-drive-app-core/: Cargo.toml  README.md
crates/iris-drive-app-core/src/: actions.rs  c_abi.rs  ffi.rs  ffi_android_test_support.rs  lib.rs  native_fips.rs  native_link_input.rs  native_provider.rs  provider_metadata.rs  state.rs  update_policy.rs
crates/iris-drive-app-core/src/ffi/: app_config_cache.rs  app_key_approval_backfill.rs  app_key_link_flow_tests.rs  app_key_link_urls.rs  backup_tests.rs  browser_gateway_tests.rs  device_actions.rs  device_approval_ack.rs  idle_tests.rs  mobile_fips_status.rs  mobile_idle_tests.rs  provider_tests.rs  snapshot_link.rs  tests.rs
crates/iris-drive-cli/: Cargo.toml  README.md
crates/iris-drive-cli/src/: account.rs  app_key_link.rs  backups.rs  commands.rs  daemon.rs  device_link.rs  drive.rs  main.rs  mount.rs  profile.rs  provider_staging.rs  publish.rs  service.rs  shares.rs  stats.rs  status.rs  sync.rs  updater.rs
crates/iris-drive-cli/src/account/: device_link_urls.rs  tests.rs
crates/iris-drive-cli/src/daemon/: app_key_link_backfill.rs  app_key_link_subscriptions.rs  apply_and_blocks.rs  direct_root_state_request.rs  gateway_runtime.rs  runtime.rs  runtime_support.rs  tests_part1.rs  tests_part2.rs  tests_part3.rs  windows_cloud_apply.rs  windows_cloud_state.rs  windows_cloud_watch.rs
crates/iris-drive-cli/src/drive/: commands.rs  provider_retry.rs  tests.rs
crates/iris-drive-cli/src/profile/: app_key_link_urls.rs  device_approval_ack.rs  device_approval_publish.rs  device_link_urls.rs  tests.rs
crates/iris-drive-cli/src/publish/: direct_root.rs  tests.rs
crates/iris-drive-cli/src/status/: backups.rs  config_load.rs  network.rs  peers.rs  tests.rs
crates/iris-drive-cli/tests/: cli_e2e.rs  daemon_gateway_e2e.rs  daemon_sync_matrix.rs  link_input_e2e.rs
crates/iris-drive-cli/tests/cli_e2e/: account_tests.rs  profile_tests.rs  tail_tests.rs
crates/iris-drive-cli/tests/daemon_sync_matrix/: app_key_link_tests.rs  daemon_process.rs  device_link_tests.rs  harness.rs  provider_harness.rs  provider_visibility_tests.rs  scenario_tests.rs
crates/iris-drive-cli/tests/support/: mod.rs
crates/iris-drive-core/: Cargo.toml  README.md
crates/iris-drive-core/src/: account.rs  app_key_link_invite.rs  app_key_link_transport.rs  app_key_summary.rs  app_keys.rs  atomic_file.rs  backup_ops.rs  backup_summary.rs  block_sync.rs  blossom_sync.rs  calendar.rs  calendar_tests.rs  config.rs  config_lock.rs  conflict.rs  daemon.rs  daemon_liveness.rs  device_labels.rs  device_link_invite.rs  device_link_transport.rs  device_summary.rs  direct_root_transport.rs  fips_bootstrap.rs  fips_status.rs  fips_sync.rs  gateway.rs  history.rs  identity.rs  indexer.rs  iris_profile.rs  lib.rs  link_input.rs  materialize.rs  merge.rs  network_sync.rs  nostr_events.rs  nostr_identity.rs  paths.rs  profile.rs  projection.rs  (+13 more)
crates/iris-drive-core/src/account/: tests.rs
crates/iris-drive-core/src/config/: backup_target.rs  default_tests.rs  profile_roster_events.rs
crates/iris-drive-core/src/daemon/: embedded.rs  local_only.rs  tests.rs
crates/iris-drive-core/src/daemon/tests/: convergence.rs  local_only_projection.rs  mod.rs
crates/iris-drive-core/src/fips_sync/: blob_runtime.rs  control_runtime.rs  download.rs  endpoint_config.rs  nostr_runtime.rs  recent_peer_cache.rs  settings_runtime.rs  tests.rs
crates/iris-drive-core/src/fips_sync/control_runtime/: tests.rs
crates/iris-drive-core/src/fips_sync/tests/: acl.rs  app_key_link_peers.rs  control.rs  mesh_fallback.rs  settings.rs  transport.rs
crates/iris-drive-core/src/gateway/: caldav.rs  caldav_tests.rs  paths.rs  proxy.rs  public_blossom_tests.rs  response.rs  tests.rs  webdav.rs
crates/iris-drive-core/src/indexer/: metadata.rs  tests.rs
crates/iris-drive-core/src/materialize/: tests.rs
crates/iris-drive-core/src/merge/: tests.rs
crates/iris-drive-core/src/nostr_events/: tests.rs
crates/iris-drive-core/src/profile/: tests.rs
crates/iris-drive-core/src/projection/: provider_perf_tests.rs  tests.rs
crates/iris-drive-core/src/relay_sync/: app_key_approval_candidate_tests.rs  app_key_approval_candidates.rs  calendar_tests.rs  restore_candidate_tests.rs  restore_candidates.rs  subscriptions.rs  tests.rs
crates/iris-drive-core/src/sync/: tests.rs
crates/iris-drive-core/tests/: caldav_iris_calendar_e2e.rs
crates/iris-drive-mac/: Cargo.toml
crates/iris-drive-mac/src/: main.rs
docs/: APPLE_FILEPROVIDER_ENTITLEMENT.md  DESIGN.md  EXPERIMENTS.md  PARITY.md  SNAPSHOT_SYNC_IMPLEMENTATION_PLAN.md  tcp-fips-blob-v1.md  ui-refactor.md  verification-tiers.md
ios/: Info.plist  IrisDriveIOS.entitlements  IrisDriveIOSDebug.entitlements  README.md  project.yml
linux/: Cargo.toml  README.md
linux/resources/: iris-drive.desktop
linux/scripts/: install-dev-desktop.sh
linux/src/: actions.rs  daemon_control.rs  data.rs  main.rs  platform.rs  refresh.rs  render.rs  setup.rs  tray.rs  ui.rs  updater.rs  widgets.rs
linux/src/actions/: backup_check.rs
macos/: Info.plist  IrisDriveMac.entitlements  README.md  Release.entitlements  project.yml
scripts/: android-gui-linking-smoke.sh  build-idrive-for-e2e.ps1  build-idrive-for-e2e.sh  (+85 more)
(+162 files in other folders)
