[workspace]
members = [
  "crates/iris-drive-core",
  "crates/iris-drive-cli",
  "crates/iris-drive-app-core",
  "crates/iris-drive-mac",
]
exclude = ["linux"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Iris Drive contributors"]
repository = "htree://self/iris-drive"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = "0.7"
base64 = "0.22"
clap = { version = "4.5", features = ["derive", "env"] }
dirs = "6"
futures = "0.3"
hex = "0.4"
http = "1"
mime_guess = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uniffi = "0.29"
uuid = { version = "1", features = ["v4", "serde"] }
nostr-sdk = { version = "0.35", default-features = false, features = ["nip44"] }
# In-flight hashtree worktree path deps — the hashtree-provider crate
# hasn't shipped to crates.io yet, and pinning hashtree-core to a
# single source avoids two versions in the dep graph. Swap both to
# crates.io once hashtree-provider publishes.
hashtree-core = { path = "../hashtree/.claude/worktrees/youthful-pare-ea57c7/rust/crates/hashtree-core" }
hashtree-blossom = { path = "../hashtree/.claude/worktrees/youthful-pare-ea57c7/rust/crates/hashtree-blossom", features = ["store"] }
hashtree-config = { path = "../hashtree/.claude/worktrees/youthful-pare-ea57c7/rust/crates/hashtree-config" }
hashtree-embedded = { path = "../hashtree/.claude/worktrees/youthful-pare-ea57c7/rust/crates/hashtree-embedded" }
hashtree-fs = { path = "../hashtree/.claude/worktrees/youthful-pare-ea57c7/rust/crates/hashtree-fs" }
hashtree-provider = { path = "../hashtree/.claude/worktrees/youthful-pare-ea57c7/rust/crates/hashtree-provider" }
tempfile = "3"
notify = "6"
notify-debouncer-mini = "0.4"
tao = "0.30"
tray-icon = "0.21"
iris-drive-core = { version = "0.1.0", path = "crates/iris-drive-core" }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[workspace.lints.rust]
unsafe_code = "forbid"
