[workspace]
members = [
  "crates/hashtree-provider",
  "crates/iris-drive-core",
  "crates/iris-drive-cli",
  "crates/iris-drive-app-core",
  "crates/iris-drive-mac",
]
exclude = ["linux"]
resolver = "2"

[workspace.package]
version = "0.1.25"
edition = "2024"
license = "MIT"
authors = ["Iris Drive contributors"]
repository = "htree://self/iris-drive"

[workspace.dependencies]
anyhow = "1"
aes-gcm = "0.10"
async-trait = "0.1"
axum = "0.7"
base64 = "0.22"
bip39 = { version = "2.2", features = ["rand"] }
clap = { version = "4.5", features = ["derive", "env"] }
dirs = "6"
futures = "0.3"
hex = "0.4"
http = "1"
mime_guess = "2"
reqwest = { version = "0.12", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uniffi = "0.29"
uuid = { version = "1", features = ["v4", "serde"] }
nostr-sdk = { version = "0.44", default-features = false, features = ["nip06", "nip44", "nip59"] }
nostr-pubsub = "0.1.9"
nostr-pubsub-relay = "0.1.9"
nostr-identity = { version = "0.3.1", path = "../nostr-social-graph/rust/crates/nostr-identity" }
# Iris Drive's provider abstraction and FIPS adapter remain local workspace
# crates; the shared Hashtree stack is consumed from its published release.
hashtree-core = "0.2.81"
hashtree-blossom = { version = "0.2.81", features = ["store"] }
hashtree-config = "0.2.81"
hashtree-embedded = "0.2.81"
hashtree-fips-transport = { version = "0.2.72", path = "crates/hashtree-fips-transport", features = ["webrtc"] }
hashtree-fs = "0.2.81"
hashtree-fuse = { version = "0.2.81", features = ["fuse"] }
hashtree-lmdb = "0.2.81"
hashtree-nostr = "0.2.81"
hashtree-resolver = { version = "0.2.81", features = ["nostr"] }
hashtree-updater = "0.2.81"
hashtree-provider = { path = "crates/hashtree-provider" }
nostr = { version = "0.44", features = ["nip44"] }
tempfile = "3"
notify = "6"
notify-debouncer-mini = "0.4"
tao = "0.30"
tray-icon = "0.21"
iris-drive-core = { version = "0.1.25", path = "crates/iris-drive-core" }
iris-drive-app-core = { version = "0.1.25", path = "crates/iris-drive-app-core" }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
# Function/file complexity is enforced by scripts/check-source-file-size.sh.
# These signature/line-count lints otherwise turn stable protocol and provider
# boundaries into permanent noise while actionable pedantic lints stay strict.
too_many_lines = "allow"
too_many_arguments = "allow"
struct_excessive_bools = "allow"

[workspace.lints.rust]
unsafe_code = "forbid"

[patch.crates-io]
hashtree-fips-transport = { path = "crates/hashtree-fips-transport" }
