[package]
name = "iris-drive-linux"
version = "0.1.0"
description = "Linux desktop shell for Iris Drive."
edition = "2024"
publish = false

[[bin]]
name = "iris-drive"
path = "src/main.rs"

[dependencies]
adw = { package = "libadwaita", version = "0.7", features = ["v1_5"] }
gio = "0.20"
glib = "0.20"
gtk = { package = "gtk4", version = "0.9", features = ["v4_12"] }
serde_json = "1"

[target.'cfg(target_os = "linux")'.dependencies]
ksni = { version = "0.3.4", features = ["blocking"] }

[package.metadata.deb]
name = "iris-drive"
maintainer = "Iris Drive"
copyright = "Iris Drive"
extended-description = "End-user file sync built on hashtree."
section = "net"
priority = "optional"
depends = "$auto, xdg-utils"
assets = [
    ["target/release/iris-drive", "usr/bin/", "755"],
    ["../target/release/idrive", "usr/bin/", "755"],
    ["resources/iris-drive.svg", "usr/share/icons/hicolor/scalable/apps/iris-drive.svg", "644"],
    ["resources/iris-drive-16.png", "usr/share/icons/hicolor/16x16/apps/iris-drive.png", "644"],
    ["resources/iris-drive-22.png", "usr/share/icons/hicolor/22x22/apps/iris-drive.png", "644"],
    ["resources/iris-drive-24.png", "usr/share/icons/hicolor/24x24/apps/iris-drive.png", "644"],
    ["resources/iris-drive-32.png", "usr/share/icons/hicolor/32x32/apps/iris-drive.png", "644"],
    ["resources/iris-drive-48.png", "usr/share/icons/hicolor/48x48/apps/iris-drive.png", "644"],
    ["resources/iris-drive-64.png", "usr/share/icons/hicolor/64x64/apps/iris-drive.png", "644"],
    ["resources/iris-drive-128.png", "usr/share/icons/hicolor/128x128/apps/iris-drive.png", "644"],
    ["resources/iris-drive-256.png", "usr/share/icons/hicolor/256x256/apps/iris-drive.png", "644"],
    ["resources/iris-drive-512.png", "usr/share/icons/hicolor/512x512/apps/iris-drive.png", "644"],
    ["resources/iris-drive.desktop", "usr/share/applications/iris-drive.desktop", "644"],
]
