[package]
name = "hdrive"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "CLI and daemon for Hashdrive end-user file sync"
repository.workspace = true
readme = "README.md"

[dependencies]
anyhow.workspace = true
clap.workspace = true
dirs.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

hashdrive-core.workspace = true
hashtree-core.workspace = true

[dev-dependencies]
tempfile.workspace = true
assert_cmd = "2"
predicates = "3"

[[bin]]
name = "hdrive"
path = "src/main.rs"

[lints]
workspace = true
