[package]
name = "hashtree-fips-transport"
version = "0.2.76"
edition = "2021"
license = "MIT"
repository = "https://git.iris.to/#/npub1xdhnr9mrv47kkrn95k6cwecearydeh8e895990n3acntwvmgk2dsdeeycm/hashtree"
homepage = "https://git.iris.to/#/npub1xdhnr9mrv47kkrn95k6cwecearydeh8e895990n3acntwvmgk2dsdeeycm/hashtree"
authors = ["Martti Malmi"]
description = "Hashtree blob transport over FIPS endpoint bytes"
keywords = ["hashtree", "fips", "p2p", "merkle"]

[features]
default = []
webrtc = ["fips-core/webrtc-transport"]

[dependencies]
async-trait = "0.1"
fips-core = "0.3.91"
hashtree-core = { version = "0.2.76", path = "../../../hashtree/rust/crates/hashtree-core" }
hashtree-network = { version = "0.2.76", path = "../../../hashtree/rust/crates/hashtree-network" }
hex = "0.4"
rmp-serde = "1.3"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
tokio = { version = "1", features = ["sync", "time", "rt", "macros"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["sync", "time", "rt", "macros", "test-util"] }

[[bin]]
name = "hashtree-fips-stdio-fixture"
path = "src/bin/stdio_fixture.rs"
